Medico que atiende
añadi una pequeña modificacion al formulario de editar paciente ya que faltaba este apartado

--- a/Proyecto/templates/cdp.html
+++ b/Proyecto/templates/cdp.html
@@ -126,6 +126,9 @@
     <div class="izquierda">
         <h1>Modificar Expediente</h1>
         <form>
+            <label for="medicoAtiende">Medico que atiende:</label>
+            <input type="text" id="medicoAtiende" name="medicoAtiende" placeholder="Ingrese el nombre del medico">
+            
             <label for="nombrePaciente">Nombre Completo del Paciente:</label>
             <input type="text" id="nombrePaciente" name="nombrePaciente" placeholder="Ingrese el nombre completo">
 
