--- a/Proyecto/templates/cita_exploracion_diagnostico.html
+++ b/Proyecto/templates/cita_exploracion_diagnostico.html
@@ -214,7 +214,7 @@
 
         <ul class="nav-links">
 
-            <li><a href="">Pacientes</a></li>
+            <li><a href="/cdp">Pacientes</a></li>
             <li><a href="">Citas</a></li>
 
         </ul>
