--- a/Proyecto/templates/consultar_citas.html
+++ b/Proyecto/templates/consultar_citas.html
@@ -13,10 +13,10 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pacientes</a>
+                        <a class="nav-link" href="medicos.html">Pacientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Citas</a>
+                        <a class="nav-link disabled" href="#">Citas</a>
                     </li>
                 </ul>
             </div>
