--- a/Proyecto/templates/cita_exploracion_diagnostico.html
+++ b/Proyecto/templates/cita_exploracion_diagnostico.html
@@ -215,7 +215,7 @@
         <ul class="nav-links">
 
             <li><a href="/cdp">Pacientes</a></li>
-            <li><a href="">Citas</a></li>
+            <li><a href="/consultar_citas">Citas</a></li>
 
         </ul>
     </nav>
