--- a/Proyecto/templates/consultar_citas.html
+++ b/Proyecto/templates/consultar_citas.html
@@ -7,20 +7,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+
+    <style>
+        nav{
+
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
+            background-color: #ffffff;
+            border-bottom: 1px solid #e0e0e0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background-color: #f4f4f4;
+        }
+
+        .nav-links {
+            list-style: none;
+            display: flex;
+            gap: 2rem;
+            margin: 0;
+            padding: 0;
+        }
+
+        .nav-links a {
+            text-decoration: none;
+            color: #000;
+            font-weight: 500;
+            position: relative;
+            padding-bottom: 2px;
+        }
+    </style>
+
     <!-- Barra de navegación -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pacientes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Citas</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    
+
+    <nav>
+
+        <ul class="nav-links">
+
+            <li><a href="/cdp">Pacientes</a></li>
+            <li><a href="/consultar_citas">Citas</a></li>
+
+        </ul>
     </nav>
 
     <div class="container-fluid mt-3">
