--- a/Proyecto/templates/pacientes.html
+++ b/Proyecto/templates/pacientes.html
@@ -94,9 +94,50 @@
             margin-left: 250px;
             margin-bottom: 15px;
         }
+
+        nav{
+
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
+            background-color: #ffffff;
+            border-bottom: 1px solid #e0e0e0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background-color: #f4f4f4;
+        }
+
+        .nav-links {
+            list-style: none;
+            display: flex;
+            gap: 2rem;
+            margin: 0;
+            padding: 0;
+        }
+
+        .nav-links a {
+            text-decoration: none;
+            color: #000;
+            font-weight: 500;
+            position: relative;
+            padding-bottom: 2px;
+        }
     </style>
 </head>
 <body>
+
+    <nav>
+
+        <ul class="nav-links">
+
+            <li><a href="/cdp">Pacientes</a></li>
+            <li><a href="/consultar_citas">Citas</a></li>
+
+        </ul>
+    </nav>
+
     <div class="container">
         <h1>Expediente de Paciente</h1>
         
