CRUD MEDICOS FUNCIONAL (yupi)
Solo falta la confirmacion de el eliminar

--- a/Proyecto/templates/login.html
+++ b/Proyecto/templates/login.html
@@ -84,7 +84,7 @@
                 <input type="text" name="txtRFC" placeholder="RFC">
                 <input type="password" name="txtContrasena" placeholder="Contraseña">
                 <a href="#">¿Olvidó su contraseña?</a>
-                <button type="button" onclick="window.location.href='/medicos'">Entrar</button>
+                <button type="button" onclick="window.location.href='/consultar_pacientes'">Entrar</button>
 
                 </form>
             </div>
