--- a/Proyecto/templates/consultar_citas.html
+++ b/Proyecto/templates/consultar_citas.html
@@ -47,7 +47,7 @@
 
         <ul class="nav-links">
 
-            <li><a href="/cdp">Pacientes</a></li>
+            <li><a href="/consultar_pacientes">Pacientes</a></li>
             <li><a href="/consultar_citas">Citas</a></li>
 
         </ul>
