--- a/Proyecto/templates/consultar_pacientes.html
+++ b/Proyecto/templates/consultar_pacientes.html
@@ -17,6 +17,7 @@
             background-color: #f4f4f4;
         }
 
+
         .izquierda, .derecha {
             width: 45%;
             padding: 20px;
@@ -162,69 +163,65 @@
         </ul>
     </nav>
 
-    <div class="izquierda">
-        <h1>Modificar Expediente</h1>
-        <form action="/modificacion_paciente">
-            <label for="medicoAtiende">ID del Médico:</label>
-            <input type="text" id="medicoAtiende" name="medico_atiende" placeholder="Ingrese el ID del medico" value="{{paciente.2}}">
+    
 
-            {% if errores and errores.medico_atiende%}
+<div class="izquierda">
+    <h1>Modificar Expediente</h1>
+    {% if paciente %}
+    <form action="/modificacion_paciente" method="post">
+        <input type="hidden" name="id_paciente" value="{{paciente[0]}}">
 
-                <p style="color: red">{{errores.medico_atiende}}</p>
-                
-            {% endif %}
-            
-            <label for="nombrePaciente">Nombre Completo del Paciente:</label>
-            <input type="text" id="nombrePaciente" name="paciente" placeholder="Ingrese el nombre completo" value="{{paciente.3}}">
+        <label for="medicoAtiende">ID del Médico:</label>
+        <input type="text" name="n_medico_atiende" placeholder="Ingrese el ID del medico" value="{{paciente[1] if paciente[1] else ''}}">
 
-            {% if errores and errores.paciente%}
+        {% if errores and errores.n_medico_atiende %}
+            <p style="color: red">{{errores.n_medico_atiende}}</p>
+        {% endif %}
+        
+        <label for="nombrePaciente">Nombre Completo del Paciente:</label>
+        <input type="text" name="n_paciente" placeholder="Ingrese el nombre completo" value="{{paciente[2] if paciente[2] else ''}}">
 
-                <p style="color: red">{{errores.paciente}}</p>
-                
-            {% endif %}
+        {% if errores and errores.n_paciente %}
+            <p style="color: red">{{errores.n_paciente}}</p>
+        {% endif %}
 
-            <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-            <input type="date" id="fechaNacimiento" name="fecha_nacimiento" value="{{paciente.4}}">
+        <label for="fechaNacimiento">Fecha de Nacimiento:</label>
+        <input type="date" name="n_fecha_nacimiento" value="{{paciente[3] if paciente[3] else ''}}">
 
-            {% if errores and errores.fecha_nacimiento%}
+        {% if errores and errores.n_fecha_nacimiento %}
+            <p style="color: red">{{errores.n_fecha_nacimiento}}</p>
+        {% endif %}
 
-                <p style="color: red">{{errores.fecha_nacimiento}}</p>
-                
-            {% endif %}
+        <label for="enfermedades">Enfermedades Crónicas:</label>
+        <input type="text" name="n_enfermedades_cronicas" placeholder="Enfermedades crónicas" value="{{paciente[4] if paciente[4] else ''}}">
 
-            <label for="enfermedades">Enfermedades Crónicas:</label>
-            <input type="text" id="enfermedades" name="enfermedades_cronicas" placeholder="Enfermedades crónicas" value="{{paciente.5}}">
+        {% if errores and errores.n_enfermedades_cronicas %}
+            <p style="color: red">{{errores.n_enfermedades_cronicas}}</p>
+        {% endif %}
 
-            {% if errores and errores.enfermedades_cronicas%}
+        <label for="alergias">Alergias:</label>
+        <input type="text" name="n_alergias" placeholder="Alergias" value="{{paciente[5] if paciente[5] else ''}}">
 
-                <p style="color: red">{{errores.enfermedades_cronicas}}</p>
-                
-            {% endif %}
+        {% if errores and errores.n_alergias %}
+            <p style="color: red">{{errores.n_alergias}}</p>
+        {% endif %}
 
-            <label for="alergias">Alergias:</label>
-            <input type="text" id="alergias" name="alergias" placeholder="Alergias" value="{{paciente.6}}">
+        <label for="antecedentes">Antecedentes Familiares:</label>
+        <input type="text" name="n_antecedentes" placeholder="Antecedentes familiares" value="{{paciente[6] if paciente[6] else ''}}">
 
-            {% if errores and errores.alergias%}
+        {% if errores and errores.n_antecedentes %}
+            <p style="color: red">{{errores.n_antecedentes}}</p>
+        {% endif %}
 
-                <p style="color: red">{{errores.alergias}}</p>
-                
-            {% endif %}
-
-            <label for="antecedentes">Antecedentes Familiares:</label>
-            <input type="text" id="antecedentes" name="antecedentes" placeholder="Antecedentes familiares" value="{{paciente.7}}">
-
-            {% if errores and errores.antecedentes%}
-
-                <p style="color: red">{{errores.antecedentes}}</p>
-                
-            {% endif %}
-
-            <div class="acciones-formulario">
-                <button type="reset">Limpiar</button>
-                <button type="submit">Actualizar Expediente</button>
-            </div>
-        </form>
-    </div>
+        <div class="acciones-formulario">
+            <button type="reset">Limpiar</button>
+            <button type="submit">Actualizar Expediente</button>
+        </div>
+    </form>
+    {% else %}
+    <p>Seleccione un paciente para modificar</p>
+    {% endif %}
+</div>
 
     <div class="derecha">
         <h1>Pacientes Actuales</h1>
@@ -234,11 +231,25 @@
             <button>Buscar</button>
         </div>
 
+                {%with mensajes =  get_flashed_messages()%}
+
+                    {% if mensajes%}
+
+                        {% for msj in mensajes%}
+                            <h4 style="color: blue">{{msj}}</h4>
+                        {%endfor%}
+                    {% endif %}
+                {%endwith%}
+
         <div class="lista-pacientes">
             <table border="1" cellpadding="10" cellspacing="0">
                 <thead>
                     <tr>
                     <th>Nombre del Paciente</th>
+                    <th>Fecha de Nacimiento</th>
+                    <th>Enfermedades Crónicas</th>
+                    <th>Alergias</th>
+                    <th>Antecedentes Familiares</th>
                     <th>Acciones</th>
                     </tr>
                 </thead>
@@ -246,11 +257,20 @@
                     {% for paciente in pacientes %}
                     <tr>
 
-                    <td>{{paciente.3}}</td>
-                    
+                    <td>{{paciente.2}}</td>
+                    <td>{{paciente.2}}</td>
+                    <td>{{paciente.2}}</td>
+                    <td>{{paciente.2}}</td>
+                    <td>{{paciente.2}}</td>
+                    <td>{{paciente.2}}</td>
                     <td>
-                        <button><a href="/actualizar_paciente/{{paciente.1}}">Modificar</a></button>
-                        <button>Eliminar</button>
+                        <form action="/actualizar_paciente/{{paciente.0}}">
+                        <button type="submit">Modificar</button>
+                        </form>
+
+                        <form action="/eliminar_paciente/{{paciente.0}}" method="post">
+                        <button type="submit">Eliminar</button>
+                        </form>    
                     </td>
 
                     </tr>
@@ -261,7 +281,7 @@
         </div>
         
         <div class ="acciones-formulario">
-            <button onclick="window.location.href='/registrar_pacientes'">Registrar Nuevo Paciente</button>
+            <button><a href="/registrar_paciente">Resgitrar Nuevo Paciente</a></button>
         </div>
     </div>
 
