--- a/Proyecto/templates/registrar_pacientes.html
+++ b/Proyecto/templates/registrar_pacientes.html
@@ -143,91 +143,101 @@
         
         <h2>Ingresa los datos del nuevo paciente</h2>
         
-        <form action="/registrar_pacientes">
+        <form action="/registrar_pacientes" method="post">
             <div class="form-section">
 
                 <div class="form-row">
                     <div class="form-label">ID de Médico</div>
-                    <input type="text" class="form-input" name="medico_atiende">
+                    <input type="text" class="form-input" name="medico_atiende" value="{{request.form.medico_atiende}}">
+
+                    {% if errores and errores.medico_atiende%}
+
+                    <p style="color: red">{{errores.medico_atiende}}</p>
+                    
+                    {% endif %}
+
                 </div>
 
-                {% if errores and errores.medico_atiende%}
-
-                <p style="color: red">{{errores.medico_atiende}}</p>
                 
-                {% endif %}
                 
                 
                 <div class="form-row">
                     <div class="form-label">Nombre Completo del Paciente</div>
-                    <input type="text" class="form-input" name="paciente">
+                    <input type="text" class="form-input" name="paciente" value="{{request.form.paciente}}">
+
+                    {% if errores and errores.paciente%}
+
+                    <p style="color: red">{{errores.paciente}}</p>
+                    
+                    {% endif %}
+
                 </div>
 
-                {% if errores and errores.paciente%}
-
-                <p style="color: red">{{errores.paciente}}</p>
                 
-                {% endif %}
                 
                 <div class="form-row">
                     <div class="form-label">Fecha de Nacimiento</div>
-                    <input type="date" class="form-input" name="fecha_nacimiento">
+                    <input type="date" class="form-input" name="fecha_nacimiento" value="{{request.form.fecha_nacimiento}}">
+
+                    {% if errores and errores.fecha_nacimiento%}
+
+                    <p style="color: red">{{errores.fecha_nacimiento}}</p>
+                    
+                    {% endif %}
+
                 </div>
 
-                {% if errores and errores.fecha_nacimiento%}
-
-                <p style="color: red">{{errores.fecha_nacimiento}}</p>
-                
-                {% endif %}
+                <div class="operation-text">Opcional</div>
                 
                 <div class="form-row">
                     <div class="form-label">Enfermedades Crónicas</div>
-                    <input type="text" class="form-input" name="enfermedades_cronicas">
+                    <input type="text" class="form-input" name="enfermedades_cronicas" value="{{request.form.enfermedades_cronicas}}">
+
+                    {% if errores and errores.enfermedades_cronicas%}
+
+                    <p style="color: red">{{errores.enfermedades_cronicas}}</p>
+                    
+                    {% endif %}
+
                 </div>
 
-                {% if errores and errores.enfermedades_cronicas%}
-
-                <p style="color: red">{{errores.enfermedades_cronicas}}</p>
                 
-                {% endif %}
                 
                 <div class="operation-text">Opcional</div>
                 
                 <div class="form-row">
                     <div class="form-label">Alergias</div>
-                    <input type="text" class="form-input" name="alergias">
+                    <input type="text" class="form-input" name="alergias" value="{{request.form.alergias}}">
+
+                    {% if errores and errores.alergias%}
+
+                    <p style="color: red">{{errores.alergias}}</p>
+                    
+                    {% endif %}
+
                 </div>
 
-                {% if errores and errores.alergias%}
-
-                <p style="color: red">{{errores.alergias}}</p>
                 
-                {% endif %}
                 
                 <div class="operation-text">Opcional</div>
                 
                 <div class="form-row">
                     <div class="form-label">Antecedentes Familiares</div>
-                    <input type="text" class="form-input" name="antecedentes">
+                    <input type="text" class="form-input" name="antecedentes" value="{{request.form.antecedentes}}">
+
+                    {% if errores and errores.antecedentes%}
+
+                    <p style="color: red">{{errores.antecedentes}}</p>
+                    
+                    {% endif %}
+
                 </div>
 
-                {% if errores and errores.antecedentes%}
-
-                <p style="color: red">{{errores.antecedentes}}</p>
                 
-                {% endif %}
 
                 <div class="separator"></div>
 
-                {%with mensajes =  get_flashed_messages()%}
-
-                    {% if mensajes%}
-
-                        {% for msj in mensajes%}
-                            <h4 style="color: blue">{{msj}}</h4>
-                        {%endfor%}
-                    {% endif %}
-                {%endwith%}
+                
 
                 <div class="separator"></div>
                 
