--- a/Proyecto/templates/consultar_citas.html
+++ b/Proyecto/templates/consultar_citas.html
@@ -40,13 +40,13 @@
         }
     </style>
 
-    <!-- Barra de navegación -->
+    
     
 
     <nav>
 
         <ul class="nav-links">
-
+            <li><a href="/administrar_medicos">Médicos</a></li>
             <li><a href="/consultar_pacientes">Pacientes</a></li>
             <li><a href="/consultar_citas">Citas</a></li>
 
@@ -55,7 +55,7 @@
 
     <div class="container-fluid mt-3">
         <div class="row">
-            <!-- Panel lateral -->
+     
             <div class="col-md-3 sidebar">
                 <h4 class="text-center">Consulta de Citas</h4>
 
@@ -94,7 +94,7 @@
                     <button class="btn btn-dark w-100">Iniciar Búsqueda</button>
                 </div>
             </div>
-            <!-- Panel principal de citas -->
+           
             <div class="col-md-9 position-relative">
                 <div class="printing-box">Imprimiendo<br>Diagnóstico (Receta)…</div>
                 <div class="row mt-4">
