--- a/Proyecto/templates/consultar_pacientes.html
+++ b/Proyecto/templates/consultar_pacientes.html
@@ -150,6 +150,8 @@
             padding-bottom: 2px;
         }
     </style>
+
+
 </head>
 <body>
 
@@ -157,9 +159,10 @@
 
         <ul class="nav-links">
 
+            <li><a href="/administrar_medicos">Médicos</a></li>
             <li><a href="/consultar_pacientes">Pacientes</a></li>
             <li><a href="/consultar_citas">Citas</a></li>
-
+            
         </ul>
     </nav>
 
