--- a/Proyecto/templates/registrar_pacientes.html
+++ b/Proyecto/templates/registrar_pacientes.html
@@ -132,9 +132,10 @@
 
         <ul class="nav-links">
 
+            <li><a href="/administrar_medicos">Médicos</a></li>
             <li><a href="/consultar_pacientes">Pacientes</a></li>
             <li><a href="/consultar_citas">Citas</a></li>
-
+            
         </ul>
     </nav>
 
