Modificando los required

--- a/Proyecto/templates/cita_exploracion_diagnostico.html
+++ b/Proyecto/templates/cita_exploracion_diagnostico.html
@@ -214,9 +214,11 @@
 
         <ul class="nav-links">
 
+            <li><a href="/administrar_medicos">Médicos</a></li>
             <li><a href="/cdp">Pacientes</a></li>
             <li><a href="/consultar_citas">Citas</a></li>
-
+            <li><a href="/exploracion_diagnostico">Exploración</a></li>
+            
         </ul>
     </nav>
 
