--- a/Proyecto/templates/consultar_citas.html
+++ b/Proyecto/templates/consultar_citas.html
@@ -49,6 +49,7 @@
             <li><a href="/administrar_medicos">Médicos</a></li>
             <li><a href="/consultar_pacientes">Pacientes</a></li>
             <li><a href="/consultar_citas">Citas</a></li>
+            <li><a href="/exploracion_diagnostico">Exploración</a></li>
 
         </ul>
     </nav>
